# cratermaker

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Cargo.toml  README.md  distclean.cmake  environment.yml  fortran_doc.md  fortran_docs.md  mkdocs.yml  pyproject.toml  pytest.ini  version.txt
.github/workflows/: build_wheels.yml  build_wheels_ubuntu-arm.yml  build_wheels_windows.yml  deploy_wheels.yml  documentation-links.yml
buildscripts/: get_gfortran_path.sh  get_gfortran_version.sh  get_lomp.sh  get_macosx_deployment_target.sh  install_jigsaw.sh  set_environment.sh  set_version.py
cmake/Modules/: FindMKL.cmake  FindNETCDF_Fortran.cmake  FindOpenMP_Fortran.cmake  SetCompileFlag.cmake  SetCratermakerFlags.cmake  SetFortranFlags.cmake  SetMKL.cmake  SetParallelizationLibrary.cmake
cratermaker/: CMakeLists.txt  __init__.py  _bind.h  _bind.pyx  _bindings.h  _bindings.pyx  _surface.h  _surface.pyx  constants.py  craterproduction.py  mkdocs.yml  montecarlo.py  simulation.py  util.py
cratermaker/core/: base.py  crater.py  impact.py  material.py  mesh.py  montecarlo.py  morphology.py  production.py  projectile.py  scale.py  simulation.py  surface.py  target.py
cratermaker/cython/: CMakeLists.txt  fortran_bind.h  fortran_bind.pyx  morphology.pyx  perlin.h  perlin.pyx
cratermaker/docs/: cratermaker_overview.md  index.md
cratermaker/fortran_bindings/: CMakeLists.txt  crater.h  crater.pyx  crater_functions.pyx  ejecta.h  ejecta.pyx  ejecta_functions.pyx  morphology.h  noise_functions.pyx  perlin.h  perlin.pyx  realistic.h  realistic.pyx
cratermaker/models/: crater_scaling.py  craterscaling.py  production_function.py
cratermaker/tests/: test_cratermaker.py  test_craterscale.py
cratermaker/utils/: CMakeLists.txt  _bind.h  _bind.pyx  _vtk.py  component_loader.py  component_utils.py  custom_types.py  export.py  general_utils.py  gui_plotter.py  init_helpers.py  mesh_tools.py  montecarlo.py  montecarlo_utils.py
crates/cratermaker-components/: Cargo.toml
crates/cratermaker-components/src/: counting.rs  lib.rs
crates/cratermaker-components/src/counting/: mod.rs
crates/cratermaker-components/src/crater/: mod.rs
crates/cratermaker-components/src/morphology/: basicmoon.rs  mod.rs  realmoon.rs
crates/cratermaker-components/src/surface/: generic.rs  mod.rs  types.rs
crates/cratermaker-core/: Cargo.toml
crates/cratermaker-gui/: Cargo.toml
crates/cratermaker-py/: Cargo.toml
crates/cratermaker-py/src/: counting_bindings.rs  lib.rs  morphology_bindings.rs  surface_bindings.rs
crates/cratermaker-py/src/counting/: counting_bindings.rs  mod.rs
crates/cratermaker-py/src/morphology/: basicmoon_bindings.rs  mod.rs  realmoon_bindings.rs
crates/cratermaker-py/src/surface/: mod.rs  surface_bindings.rs
docs/: Makefile  api.rst  conf.py  contributing.rst  environment.yml  index.md  index.rst  license.rst  publications.rst  qmc_selected_basins.csv  qmc_with_copernicus.csv  requirements.txt  targetguide_DV.ipynb  whats-new.rst
docs/_exts/: cratermaker_autodoc.py
docs/_images/: morphology_profile.py
docs/_static/: morphology_profile.py  style.css
docs/api/: base.rst  counting.rst  crater.md  crater.rst  general_utils.md  index.rst  layers.rst  montecarlo.md  morphology.md  morphology.rst  production.md  production.rst  projectile.rst  scale.md  scaling.rst  simulation.md  simulation.rst  surface.md  surface.rst  target.md  target.rst  utils.rst
docs/contributing/: index.rst
docs/getting-started-guide/: index.rst
docs/user-guide/: components-overview.rst  counting.rst  crater.rst  defaults.rst  index.rst  installation.rst  morphology.rst  production.rst  projectile.rst  scaling.rst  simulation.rst  surface.rst  target.rst  visualizing.rst
environments/: cratermaker-dev.yml  cratermaker-docs.yml  requirements-docdev.txt
examples/: .gitattributes  GALLERY_HEADER.rst  plot_chronology.py  plot_isochron.py  plot_projectilecsfd.py  plot_sample_csfd.py
examples/01-simulation_and_visualization/: 1.1-visualize_one_crater.py  1.2-Moon_simulation_pyvista.py  1.3-mars_simulation_pyvista.py  1.4-export_to_geopackage.py  1.5-Kepler_crater_datasurface.py  1.6-emplace_crater_at_distance.py  1.7-Moon_quasimc.py  1.7-load_phobos_dem.py  1.8-Moon_quasimc.py  GALLERY_HEADER.rst  Moon_simulation_pyvista.py  export_to_geopackage.py  mars_simulation_pyvista.py  qmc_input.csv  visualize_one_crater.py
examples/02-production/: 2.1-plot_isochron.py  2.2-plot_projectilecsfd.py  2.3-plot_chronology.py  2.4-plot_sample_csfd.py  2.5-plot_random_size.py  2.6-plot_random_location.py  2.7-plot_random_velocity.py  2.8-plot_random_impact_angle.py  GALLERY_HEADER.rst  plot_random_impact_angle.py  plot_random_velocity.py
examples/03-projectiles_and_scaling/: 3.1-plot_transition_diameter.py  3.2-plot_projectile_to_crater_scaling.py  3.3-plot_projectile_random_location.py  3.4-plot_projectile_random_velocity.py  3.5-plot_projectile_impact_angle.py  GALLERY_HEADER.rst  plot_projectile_to_crater_scaling.py
examples/04-topography/: 4.1-plot_shaded_crater.py  4.2-plot_crater_profile.py  4.3-plot_topographic_diffusion.py  (+10 more)
fortran/: CMakeLists.txt
recipe/: meta.yaml
site/: 404.html  index.html  objects.inv  requirements.txt
src/: CMakeLists.txt  counting_functions.rs  crater.rs  crater_functions.rs  driver_module.f90  ejecta.rs  ejecta_functions.rs  lib.rs  main.f90  morphology_functions.rs  realistic.rs  simplemoon_functions.rs  surface_functions.rs
src/bind/: bind_module.f90
src/bindings/: bindings_module.f90
src/crater/: crater.f90  crater_module.f90  crater_submodule.f90
src/ejecta/: ejecta_module.f90  ejecta_submodule.f90
src/globals/: globals_module.f90  globals_module.f90.in
src/morphology/: morphology_module.f90  morphology_submodule.f90
src/perlin/: perlin_module.f90  perlin_submodule.f90
src/realistic/: realistic_module.f90  realistic_submodule.f90
src/simulation/: simulation.f90  simulation_module.f90
src/surface/: surface_module.f90
src/util/: util_module.f90  util_perlin.f90  util_submodule.f90
tests/: test_cratermaker.py
(+178 files in other folders)
