[package]
name = "cratermaker"
version = "2025.4.1-a1.dev139+gd6784b0"
edition = "2021"

[lib]
name = "cratermaker"
crate-type = [ "cdylib",]

[dependencies]
itertools = "0.14.0"
numpy = "0.24.0"
pyo3 = "0.24.0"
rand = "0.9.1"
rayon = "1.10.0"

[dependencies.ndarray]
version = "0.16.1"
features = [ "rayon",]

[profile.release]
codegen-units = 1
lto = "fat"

[target.'cfg(not(target_env = "msvc"))'.dependencies.tikv-jemallocator]
version = "0.6"
features = [ "disable_initial_exec_tls",]
