[project]
name = "cratermaker"
dynamic = ["version"]
authors=[
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]
maintainers = [
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]

readme = "README.md"
requires-python=">=3.10"
license={file = "LICENSE"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Rust',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
]
keywords=['astronomy','astrophysics', 'planetary', 'monte carlo',  'moon', 'landscape evolution']
dependencies = [
    'numpy',
    'dask>=2025.03.0',
    'xarray>=2025.1.2',
    'uxarray>=2025.03.0',
    'vtk>=9.4',
    'scipy',
    'matplotlib',
    'tqdm',
    'pyogrio',
    'trimesh',
    'datashader>=0.17.0',
    'geoviews>=1.14.0',
    'PyYAML>=6',
    'astropy>=6'
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
Repository = 'https://github.com/MintonGroup/cratermaker'

[project.entry-points."cratermaker.components.scaling"]
montecarlo = "cratermaker.components.scaling.montecarlo:MontecarloScaling"
ctem = "cratermaker.components.scaling.ctem:CTEMScaling"

[project.entry-points."cratermaker.components.production"]
powerlaw = "cratermaker.components.production.powerlaw:PowerLawProduction"
neukum = "cratermaker.components.production.neukum:NeukumProduction"

[project.entry-points."cratermaker.components.morphology"]
simplemoon = "cratermaker.components.morphology.simplemoon:SimpleMoon"
du2025 = "cratermaker.components.morphology.du2025:Du2025"

[project.entry-points."cratermaker.components.surface"]
arbitrary_resolution = "cratermaker.components.surface.arbitrary_resolution:ArbitraryResolutionSurface"
icosphere = "cratermaker.components.surface.icosphere:IcosphereSurface"
hireslocal = "cratermaker.components.surface.hireslocal:HiResLocalSurface"

[project.entry-points."cratermaker.components.projectile"]
asteroids = "cratermaker.components.projectile.asteroids:AsteroidProjectiles"
comets = "cratermaker.components.projectile.comets:CometProjectiles"
generic = "cratermaker.components.projectile.generic:GenericProjectiles"

[build-system]
requires = [
    "maturin>=1.8,<2.0"
]
build-backend = "maturin"

[tool.maturin]
python-source = "."
include = ["cratermaker/_version.py", "cratermaker/**/*.py", "pyproject.toml", "Cargo.toml"]
features = ["pyo3/extension-module"]
module-name = "cratermaker._cratermaker"

