[project]
name = "cratermaker"
dynamic = ["version"]
authors=[
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]
maintainers = [
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]

readme = "README.md"
requires-python=">=3.10"
license={file = "LICENSE"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Rust',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
]
keywords=['astronomy','astrophysics', 'planetary', 'monte carlo',  'moon', 'landscape evolution']
dependencies = [
    'numpy',
    'dask>=2025.03.0',
    'xarray>=2025.1.2',
    'uxarray>=2025.03.0',
    'vtk>=9.4',
    'scipy',
    'matplotlib',
    'tqdm',
    'pyogrio',
    'trimesh',
    'datashader>=0.17.0',
    'geoviews>=1.14.0',
    'PyYAML>=6',
    'astropy>=6'
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
Repository = 'https://github.com/MintonGroup/cratermaker'

[project.entry-points."cratermaker.components.scaling"]
montecarlo = "cratermaker.components.scaling.montecarlo:MontecarloScaling"
ctem = "cratermaker.components.scaling.ctem:CTEMScaling"

[project.entry-points."cratermaker.components.production"]
powerlaw = "cratermaker.components.production.powerlaw:PowerLawProduction"
neukum = "cratermaker.components.production.neukum:NeukumProduction"

[project.entry-points."cratermaker.components.morphology"]
simplemoon = "cratermaker.components.morphology.simplemoon:SimpleMoon"
du2025 = "cratermaker.components.morphology.du2025:Du2025"

[project.entry-points."cratermaker.components.surface"]
arbitrary_resolution = "cratermaker.components.surface.arbitrary_resolution:ArbitraryResolutionSurface"
icosphere = "cratermaker.components.surface.icosphere:IcosphereSurface"
hireslocal = "cratermaker.components.surface.hireslocal:HiResLocalSurface"

[project.entry-points."cratermaker.components.projectile"]
asteroids = "cratermaker.components.projectile.asteroids:AsteroidProjectiles"
comets = "cratermaker.components.projectile.comets:CometProjectiles"
generic = "cratermaker.components.projectile.generic:GenericProjectiles"

[build-system]
requires = [
    "maturin>=1.8,<2.0"
]
build-backend = "maturin"

[tool.maturin]
python-source = "."
include = ["cratermaker/_version.py", "cratermaker/**/*.py", "pyproject.toml", "Cargo.toml"]
features = ["pyo3/extension-module"]
module-name = "cratermaker._cratermaker"

[tool.ruff]
target-version = 'py310'

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

line-length = 132

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]

ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
    "PGH001",  # use of "eval"
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = [
    "pydantic.validator",
    "pydantic.root_validator",
]
